[package]
name = "bapcsales-watcher"
version = "0.1.0"
authors = ["mattc"]
edition = "2018"

[dependencies]
surf = "1.0.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.6.2"
features = ["attributes"]
